# brubeck

./: CLAUDE.md  COLORIZATION_STATUS.md  COMMAND_HISTORY_SPEC.md  Cargo.toml  FILE_REORGANIZATION_SUMMARY.md  INSTRUCTION_IMPLEMENTATION.md  INTERPRETER_REFACTOR_SPEC.md  PARSER_PROGRESS.md  PROJECT_STATUS.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  REPL_USABILITY_FEEDBACK.md  TODO_PHASE2.md  UNDO_REDO_SPEC.md  test_history.txt
docs/specs/: CLI_ARGS_SPEC.md  TESTING_GOALS.md  UNDO_REDO_SPEC.md
src/: cli.rs  formats.rs  history.rs  immediate.rs  interpreter.rs  lib.rs
src/interpreter/: builder.rs  errors.rs  executor.rs  formatter.rs  fuzzy.rs  mod.rs  parser.rs  state_history.rs  types.rs  validator.rs
src/rv32_i/: cpu.rs  formats.rs  immediate.rs  instructions.rs  mod.rs  pseudo_instructions.rs  registers.rs
tests/: README.md  TEST_COVERAGE.md  cli_args.rs  cli_args.rs.disabled  cli_config.rs  cli_history.rs.disabled  enhanced_errors.rs  error_types.rs  history_navigation.rs  interpreter_reset.rs  parse_api.rs  parser.rs  parser_comprehensive.rs  pseudo_instructions.rs  undo_redo.rs  unit_components.rs  unit_instructions.rs  unit_tests.rs
tests/common/: assertions.rs  context.rs  mod.rs  values.rs
tests/history_navigation/: comprehensive_tests.rs  integration_tests.rs
tests/undo_redo/: comprehensive_tests.rs  integration_tests.rs
tests/unit/: cli.rs  history.rs  mod.rs  repl_history.rs  test_helpers.rs
tests/unit/components/: csr.rs  immediate.rs  mod.rs
tests/unit/instructions/: arithmetic.rs  branches.rs  comparison.rs  csr.rs  (+9 more)
