[package]
name = "brubeck"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
description = "A RISC-V REPL and emulation library ... a work in progress!"
homepage = "https://github.com/peat/brubeck"
repository = "https://github.com/peat/brubeck"
readme = "README.md"
keywords = ["risc-v", "riscv"]
categories = ["emulators"]
include = ["**/*.rs", "Cargo.toml"]
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Binary-only dependencies for the REPL
[dependencies.crossterm]
version = "0.27"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[[bin]]
name = "brubeck"
path = "src/bin/brubeck.rs"
